--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../styles/main.css">
-</head>
-<body>
-    Creando diversidad digital
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Evaluacion MOdulo 1 - Dandara</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../styles/main.css" />
+  </head>
+  <body>
+    <header>
+      <img src="./img/logo-adalab.png" alt="Logo Adalab" />
+      <nav>
+        <ul>
+          <li>Blog</li>
+          <li>Contacto</li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Creando diversidad digital</h1>
+    </main>
+  </body>
 </html>
