Add header with logo and menu nav

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
-    <header>
-      <img src="./img/logo-adalab.png" alt="Logo Adalab" />
-      <nav>
-        <ul>
-          <li>Blog</li>
-          <li>Contacto</li>
+    <header class="header">
+      <img class= "logo" src="./img/logo-adalab.png" alt="Logo Adalab" />
+      <nav class="menu-nav">
+        <ul class="menu-nav-list">
+          <li><a href="">Blog</a></li>
+          <li><a href="">Contacto</a></li>
         </ul>
       </nav>
     </header>
