Add main mobile version

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <h1>Creando diversidad digital</h1>
+    <main class="main">
+      <h1 class="text-main-title">
+        <span class="main-text">Creando</span> 
+        <span class="main-text">diversidad</span>
+        <span class="main-text">digital</span>
+    </h1>
     </main>
   </body>
 </html>
