--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header container-header">
       <img class= "logo" src="./img/logo-adalab.png" alt="Logo Adalab" />
       <nav class="menu-nav">
         <ul class="menu-nav-list">
