--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       href="https://fonts.googleapis.com/css?family=Rubik"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <header class="header container-header">
-      <img class= "logo" src="./img/logo-adalab.png" alt="Logo Adalab" />
+      <img class= "logo" src="./img/logo-adalab.png" alt="Logo Adalab" title="Logo de Adalab"/>
       <nav class="menu-nav">
         <ul class="menu-nav-list">
-          <li><a href="">Blog</a></li>
-          <li><a href="">Contacto</a></li>
+          <li><a href="" title="Link para Blog">Blog</a></li>
+          <li><a href="" title="Link para Contacto">Contacto</a></li>
         </ul>
       </nav>
     </header>
