Latest fixes on HTML and CSS file

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       <img class= "logo" src="./img/logo-adalab.png" alt="Logo Adalab" title="Logo de Adalab"/>
       <nav class="menu-nav">
         <ul class="menu-nav-list">
-          <li><a href="" title="Link para Blog">Blog</a></li>
-          <li><a href="" title="Link para Contacto">Contacto</a></li>
+          <li><a class="link" href="" title="Link para Blog">Blog</a></li>
+          <li><a class="link" href="" title="Link para Contacto">Contacto</a></li>
         </ul>
       </nav>
     </header>
     <main class="main">
       <h1 class="text-main-title">
         <span class="main-text">Creando</span> 
-        <span class="main-text">diversidad</span>
-        <span class="main-text">digital</span>
+        <span class="main-text">Diversidad</span>
+        <span class="main-text">Digital</span>
     </h1>
     </main>
   </body>
